More fixes for scrolling on mobile, disable zoom test

--- a/style.css
+++ b/style.css
@@ -4549,3 +4549,11 @@
 
       pointer-events: none;
     }
+
+    body.modal-lock {
+      overflow: hidden;
+      touch-action: none;
+      overscroll-behavior: none;
+      position: fixed;
+      width: 100%;
+    }
